Bug 1492114 - Really ensure that the Third-Party Cookies description doesn't wrap unnecessarily; r=johannh a=pascalc
The selector should apply to deck elements that do have a selectedIndex
attribute but it's not 0.

Differential Revision: https://phabricator.services.mozilla.com/D6567

--- a/browser/themes/shared/incontentprefs/privacy.css
+++ b/browser/themes/shared/incontentprefs/privacy.css
@@ -132,8 +132,7 @@
   margin-top: 0.75em;
 }
 
-#blockCookiesCBDeck:not([selectedIndex]),
-#blockCookiesCBDeck:not([selectedIndex="0"]) {
+#blockCookiesCBDeck[selectedIndex]:not([selectedIndex="0"]) {
   max-width: 444px;
 }
 
